--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
 </div>
 <svg id="Layer_1" x="0" y="0" version="1.1" viewBox="0 0 1920 1080">
     <g class="wholeHello">
-      <g class="helloTop" transform="translate(0,16.6)">
+      <g class="helloTop">
         <path d="M848 114.2h-9.8c.7 4.7 1 8.7 1 14.9V155h7.8v-26.2c0-6.1.2-9.3 1-14.6zM781.7 128.8c0-6.2.2-9.6 1-14.6h-9.8c.7 4.7 1 8.5 1 14.9V155h7.8v-26.2zM912.1 122.1c6 0 9.3.3 13.3 1v-9.8c-4.3.7-8 1-13.3 1h-34.5c-5.6 0-8.5-.1-13-.4.7 5.8 1 9.6 1 15.2v26h8v-32.9h38.5zM948.1 114.3h-9.8c.7 4.8 1 8.7 1 15.1V155h7.8v-25.6c0-6.7.3-10.2 1-15.1zM1019.8 114.3h-9.8c.7 4.8 1 8.7 1 15.1V155h7.8v-25.6c0-6.7.3-10.2 1-15.1zM1115 112.3c-11.4 0-21.1 4.3-28.5 12.4-6.6 7.3-10.9 17.8-12.5 30.3h8.2c3.1-21.3 15.4-34.8 32.9-34.8 8.8 0 16.4 3.4 22.3 9.9 5.5 6.1 9 14.5 10.4 24.9h8.2c-3.2-26.4-18.5-42.7-41-42.7z" class="st0"/>
       </g>
       <g class="helloBottom">
@@ -40,7 +40,7 @@
         <rect x="1011.1" y="172" width="8" height="4" fill="#000000"/>
       </g>
       <g class="stretchSix">
-        <rect x="1074.3" y="172" width="8" height="4" fill="#000000"/>
+        <rect x="1073.8" y="172" width="8" height="4" fill="#000000"/>
       </g>
       <g class="stretchLast">
         <rect x="1148" y="172" width="8" height="4" fill="#000000"/>
