--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -102,6 +102,18 @@ html {
  }
 
  .stretch {
-   width: 8px;
-   height: 4px;
+   width: 5.9px;
+   height: 3px;
+   overflow: visible;
  }
+
+line {
+  stroke-width: 5.9px;
+  stroke: black;
+	fill: none;
+}
+
+
+.stretch > line.oneOpen {
+  stroke: black;
+}
