--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,13 +19,13 @@
 <svg id="Layer_1" x="0" y="0" version="1.1" viewBox="0 0 1920 1080">
     <g class="wholeHello">
       <g class="helloTop">
-        <path d="M848 114.2h-9.8c.7 4.7 1 8.7 1 14.9V155h7.8v-26.2c0-6.1.2-9.3 1-14.6zM781.7 128.8c0-6.2.2-9.6 1-14.6h-9.8c.7 4.7 1 8.5 1 14.9V155h7.8v-26.2zM912.1 122.1c6 0 9.3.3 13.3 1v-9.8c-4.3.7-8 1-13.3 1h-34.5c-5.6 0-8.5-.1-13-.4.7 5.8 1 9.6 1 15.2v26h8v-32.9h38.5zM948.1 114.3h-9.8c.7 4.8 1 8.7 1 15.1V155h7.8v-25.6c0-6.7.3-10.2 1-15.1zM1019.8 114.3h-9.8c.7 4.8 1 8.7 1 15.1V155h7.8v-25.6c0-6.7.3-10.2 1-15.1zM1115 112.3c-11.4 0-21.1 4.3-28.5 12.4-6.6 7.3-10.9 17.8-12.5 30.3h8.2c3.1-21.3 15.4-34.8 32.9-34.8 8.8 0 16.4 3.4 22.3 9.9 5.5 6.1 9 14.5 10.4 24.9h8.2c-3.2-26.4-18.5-42.7-41-42.7z" class="st0"/>
+        <path d="M848 114.2h-9.8c.7 4.7 1 8.7 1 14.9V155h7.8v-26.2c0-6.1.2-9.3 1-14.6zM781.7 128.8c0-6.2.2-9.6 1-14.6h-9.8c.7 4.7 1 8.5 1 14.9V155h7.8v-26.2zM912.1 122.1c6 0 9.3.3 13.3 1v-9.8c-4.3.7-8 1-13.3 1h-34.5c-5.6 0-8.5-.1-13-.4.7 5.8 1 9.6 1 15.2v26h8v-32.9h38.5zM948.1 114.3h-9.8c.7 4.8 1 8.7 1 15.1V155h7.8v-25.6c0-6.7.3-10.2 1-15.1zM1019.8 114.3h-9.8c.7 4.8 1 8.7 1 15.1V155h7.8v-25.6c0-6.7.3-10.2 1-15.1zM1115 112.3c-11.4 0-21.1 4.3-28.5 12.4-6.6 7.3-10.9 17.8-12.5 30.3h8.2c3.1-21.3 15.4-34.8 32.9-34.8 8.8 0 16.4 3.4 22.3 9.9 5.5 6.1 9 14.5 10.4 24.9h8.2c-3.2-26.4-18.5-42.7-41-42.7z"/>
       </g>
       <g class="helloBottom">
         <path d="M839.2 179h-57.5v-4h-7.8v47.8c0 6.5-.2 10.1-1 14.9h9.8c-.7-4.7-1-8.3-1-14.9V187h57.5v35.8c0 6.3-.2 10.1-1 14.9h9.8c-.7-5.1-1-8.4-1-14.9V175h-7.8v4zM865.6 222.3c0 6.5-.2 10.7-1 15.8 4.5-.3 7.4-.4 13-.4h35.7c6.3 0 9.4.3 13.2 1v-9.8c-4.4.7-7.9 1-13.2 1h-39.7v-42.7h33.1c6.2 0 9.1.3 13.3 1v-9.8c-4.8.7-8 1-13.3 1h-33V175h-8v47.3zM939.4 222.2c0 6.5-.2 11-1 16 4.3-.3 7.4-.4 13-.4h35.8c6.4 0 9.6.3 13.5 1v-9.9c-4.8.7-7.9 1-13.5 1h-40V175h-7.8v47.2zM1011.1 222.2c0 6.5-.2 11-1 16 4.3-.3 7.4-.4 13-.4h35.8c6.4 0 9.6.3 13.4 1v-9.9c-4.8.7-7.9 1-13.4 1h-40V175h-7.8v47.2zM1148.6 185.9c0 15.2-4.1 28.1-11.2 36.1-5.8 6.3-13.3 9.6-22.1 9.6-20.2 0-33.8-18.3-33.8-45.7 0-3.8.3-7.5.8-10.9h-8.2c-.4 3.5-.7 7.2-.7 11.1 0 32.8 16.2 53.6 41.7 53.6 25.5 0 41.7-20.8 41.7-53.6 0-3.9-.2-7.5-.7-11.1h-8.2c.4 3.4.7 7.1.7 10.9z"/>  
       </g>
-      <g class="stretchOne stretch">
-        <line class="oneOpen" x1="777.7" y1="177" x2="777.7" y2="54"  vector-effect="non-scaling-stroke"/>
+      <g id="stretchOne" class="stretch">
+        <line class="oneOpen" x1="777.8" y1="177" x2="777.8" y2="54"/>
       </g>
       <g class="stretchTwo">
         <rect x="839.2" y="172" width="8" height="4" fill="#000000"/>
