--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,36 +14,55 @@
 </div>
 <div class="carrousel">
 </div>
+<% if false %>
 <div class="down" id="description">
 </div>
+<% end %>
 <svg id="Layer_1" x="0" y="0" version="1.1" viewBox="0 0 1920 1080">
     <g class="wholeHello">
       <g class="helloTop">
-        <path d="M848 114.2h-9.8c.7 4.7 1 8.7 1 14.9V155h7.8v-26.2c0-6.1.2-9.3 1-14.6zM781.7 128.8c0-6.2.2-9.6 1-14.6h-9.8c.7 4.7 1 8.5 1 14.9V155h7.8v-26.2zM912.1 122.1c6 0 9.3.3 13.3 1v-9.8c-4.3.7-8 1-13.3 1h-34.5c-5.6 0-8.5-.1-13-.4.7 5.8 1 9.6 1 15.2v26h8v-32.9h38.5zM948.1 114.3h-9.8c.7 4.8 1 8.7 1 15.1V155h7.8v-25.6c0-6.7.3-10.2 1-15.1zM1019.8 114.3h-9.8c.7 4.8 1 8.7 1 15.1V155h7.8v-25.6c0-6.7.3-10.2 1-15.1zM1115 112.3c-11.4 0-21.1 4.3-28.5 12.4-6.6 7.3-10.9 17.8-12.5 30.3h8.2c3.1-21.3 15.4-34.8 32.9-34.8 8.8 0 16.4 3.4 22.3 9.9 5.5 6.1 9 14.5 10.4 24.9h8.2c-3.2-26.4-18.5-42.7-41-42.7z"/>
+        <path d="M848,26.2L848,26.2l-9.8,0c0.7,4.7,1,8.7,1,14.9V71h-57.5V40.8c0-6.2,0.2-9.6,1-14.6h-9.8c0.7,4.7,1,8.5,1,14.9V83h7.8v-4
+		h57.5v4h7.8V40.8C847,34.7,847.2,31.5,848,26.2z"/>
+	<path d="M906.6,79.2c6.2,0,9.1,0.3,13.3,1v-9.8c-4.8,0.7-8,1-13.3,1h-33V34.1h38.5c6,0,9.3,0.3,13.3,1v-9.8c-4.3,0.7-8,1-13.3,1
+		h-34.5c-5.6,0-8.5-0.1-13-0.4c0.7,5.8,1,9.6,1,15.2v42h7.9v-3.8H906.6z"/>
+	<path d="M948.1,26.3h-9.8c0.7,4.8,1,8.7,1,15.1V83h7.8V41.4C947.1,34.7,947.4,31.2,948.1,26.3z"/>
+	<path d="M1019.8,26.3h-9.8c0.7,4.8,1,8.7,1,15.1V83h7.8V41.4C1018.8,34.7,1019.1,31.2,1019.8,26.3z"/>
+	<path d="M1115,24.3c-11.4,0-21.1,4.3-28.5,12.4c-8.5,9.4-13.2,24-13.2,41.3c0,1.7,0.1,3.3,0.1,4.9h8.2c-0.1-1.7-0.2-3.3-0.2-5.1
+		c0-27.5,13.3-45.7,33.7-45.7c8.8,0,16.4,3.4,22.3,9.9c7.3,8.1,11.1,20.4,11.1,35.8c0,1.7-0.1,3.4-0.2,5.1h8.2
+		c0.1-1.6,0.1-3.3,0.1-4.9C1156.7,45.3,1140.5,24.3,1115,24.3z"/>
       </g>
       <g class="helloBottom">
-        <path d="M839.2 179h-57.5v-4h-7.8v47.8c0 6.5-.2 10.1-1 14.9h9.8c-.7-4.7-1-8.3-1-14.9V187h57.5v35.8c0 6.3-.2 10.1-1 14.9h9.8c-.7-5.1-1-8.4-1-14.9V175h-7.8v4zM865.6 222.3c0 6.5-.2 10.7-1 15.8 4.5-.3 7.4-.4 13-.4h35.7c6.3 0 9.4.3 13.2 1v-9.8c-4.4.7-7.9 1-13.2 1h-39.7v-42.7h33.1c6.2 0 9.1.3 13.3 1v-9.8c-4.8.7-8 1-13.3 1h-33V175h-8v47.3zM939.4 222.2c0 6.5-.2 11-1 16 4.3-.3 7.4-.4 13-.4h35.8c6.4 0 9.6.3 13.5 1v-9.9c-4.8.7-7.9 1-13.5 1h-40V175h-7.8v47.2zM1011.1 222.2c0 6.5-.2 11-1 16 4.3-.3 7.4-.4 13-.4h35.8c6.4 0 9.6.3 13.4 1v-9.9c-4.8.7-7.9 1-13.4 1h-40V175h-7.8v47.2zM1148.6 185.9c0 15.2-4.1 28.1-11.2 36.1-5.8 6.3-13.3 9.6-22.1 9.6-20.2 0-33.8-18.3-33.8-45.7 0-3.8.3-7.5.8-10.9h-8.2c-.4 3.5-.7 7.2-.7 11.1 0 32.8 16.2 53.6 41.7 53.6 25.5 0 41.7-20.8 41.7-53.6 0-3.9-.2-7.5-.7-11.1h-8.2c.4 3.4.7 7.1.7 10.9z"/>  
+        <path d="M773.9,121.8c0,6.5-0.2,10.1-1,14.9h9.8c-0.7-4.7-1-8.3-1-14.9V90h-7.8V121.8z"/>
+	    <path d="M839.2,121.8c0,6.3-0.2,10.1-1,14.9h9.8c-0.7-5.1-1-8.4-1-14.9V90h-7.8V121.8z"/>
+	    <path d="M865.6,121.3c0,6.5-0.2,10.7-1,15.8c4.5-0.3,7.4-0.4,13-0.4h35.7c6.3,0,9.4,0.3,13.2,1v-9.8c-4.4,0.7-7.9,1-13.2,1h-39.7
+		V90h-7.9V121.3z"/>
+	    <path d="M939.4,121.2c0,6.5-0.2,11-1,16c4.3-0.3,7.4-0.4,13-0.4v0h35.8c6.4,0,9.6,0.3,13.5,1v-9.9c-4.8,0.7-7.9,1-13.5,1h-40V90
+		h-7.8V121.2z"/>
+      <path d="M1011.1,121.2c0,6.5-0.2,11-1,16c4.3-0.3,7.4-0.4,13-0.4v0h35.8c6.4,0,9.6,0.3,13.4,1v-9.9c-4.8,0.7-7.9,1-13.4,1h-40V90
+		h-7.8V121.2z"/>
+      <path d="M1137.3,121c-5.8,6.3-13.3,9.6-22.1,9.6c-19,0-32.1-16.1-33.6-40.7h-8.2c1.6,29.9,17.3,48.6,41.6,48.6
+		c24.2,0,40-18.7,41.6-48.6h-8.2C1147.6,103,1143.7,113.9,1137.3,121z"/>
       </g>
       <g class="stretchOne" class="stretch">
-        <line class="open" x1="777.8" y1="177" x2="777.8" y2="54"/>
+        <line class="open" x1="777.8" y1="177" x2="777.8" y2="30"/>
       </g>
       <g class="stretchTwo">
-        <line class="open" x1="843" y1="177" x2="843" y2="54"/>
+        <line class="open" x1="843" y1="177" x2="843" y2="30"/>
       </g>
       <g class="stretchThree">
-        <line class="open" x1="869.7" y1="177" x2="869.7" y2="54"/>
+        <line class="open" x1="869.7" y1="177" x2="869.7" y2="30"/>
       </g>
       <g class="stretchFour">
-        <line  class="open" x1="943.1" y1="177" x2="943.1" y2="54"/>
+        <line  class="open" x1="943.1" y1="177" x2="943.1" y2="30"/>
       </g>
       <g class="stretchFive">
-        <line class="open" x1="1014.8" y1="177" x2="1014.8" y2="54"/>
+        <line class="open" x1="1014.8" y1="177" x2="1014.8" y2="30"/>
       </g>
       <g class="stretchSix">
-        <line class="open" x1="1078.1" y1="177" x2="1078.1" y2="54"/>
+        <line class="open" x1="1078" y1="177" x2="1078" y2="30"/>
       </g>
       <g class="stretchLast">
-        <line class="open" x1="1152" y1="177" x2="1152" y2="54" />
+        <line class="open" x1="1152" y1="177" x2="1153" y2="30" />
       </g>
     </g>
 </svg>
