--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -44,26 +44,57 @@
 		c24.2,0,40-18.7,41.6-48.6h-8.2C1147.6,103,1143.7,113.9,1137.3,121z"/>
       </g>
       <g class="stretchOne" class="stretch">
-        <line class="open" x1="777.8" y1="177" x2="777.8" y2="30"/>
+        <line class="openOne" x1="777.8" y1="177" x2="777.8" y2="30"/>
       </g>
       <g class="stretchTwo">
-        <line class="open" x1="843" y1="177" x2="843" y2="30"/>
+        <line class="openOne" x1="843" y1="177" x2="843" y2="30"/>
       </g>
       <g class="stretchThree">
-        <line class="open" x1="869.7" y1="177" x2="869.7" y2="30"/>
+        <line class="openOne" x1="869.7" y1="177" x2="869.7" y2="30"/>
       </g>
       <g class="stretchFour">
-        <line  class="open" x1="943.1" y1="177" x2="943.1" y2="30"/>
+        <line  class="openOne" x1="943.1" y1="177" x2="943.1" y2="30"/>
       </g>
       <g class="stretchFive">
-        <line class="open" x1="1014.8" y1="177" x2="1014.8" y2="30"/>
+        <line class="openOne" x1="1014.8" y1="177" x2="1014.8" y2="30"/>
       </g>
       <g class="stretchSix">
-        <line class="open" x1="1078" y1="177" x2="1078" y2="30"/>
+        <line class="openOne" x1="1078" y1="177" x2="1078" y2="30"/>
       </g>
       <g class="stretchLast">
-        <line class="open" x1="1152" y1="177" x2="1153" y2="30" />
+        <line class="openOne" x1="1152" y1="177" x2="1153" y2="30" />
       </g>
+    </g>
+    <g class="wholeMyName">
+      <g class="myNameTop">
+        <path d="M690.7 143.9h-11.8c-.7 3.7-2 7.7-4.2 12.9L650.9 215h7.8l17.4-42.3c2.1-5.2 3.8-10.2 6.8-19.7-.6 15.3-.7 19.6-.7 24.7V215h7.5v-55.8c0-6.5.3-10.3 1-15.3zM611 156.9c-1.9-4.3-3.2-8.8-4.1-12.9h-12.1c.7 4.8 1 9.1 1 15.3V215h7.6v-37.3c0-4.8-.2-10.5-.9-24.7 3.3 10 4.9 14.5 7.2 20.1L627 215h7.8L611 156.9zM772.5 155.3c3.7-6.3 5.4-9.1 7.3-11.4h-11.5c-1 3.2-2.2 5.9-5.9 12.4l-22.2 39.4-22.2-39.4c-4.1-7-5.1-9.2-6-12.4h-11.3c2.1 2.9 3.9 5.9 7.2 11.4l28.3 48.4V215h8.1v-11.2l28.2-48.5zM906.5 143.9h-9.8c.7 4.7 1 8.7 1 15V215h7.8v-56.1c0-6.6.2-10.3 1-15zM849.7 155.8c-3.6-5.9-5.1-8.8-6-11.9h-11.2c.7 4.8 1 8.7 1 14.9V215h7.6v-40.2c0-4.3-.1-10.6-.6-21.2 2.8 5.6 5.8 11.2 8.4 15.4l27.4 46h8.9l-35.5-59.2zM964.7 143.9h-10.1c-.5 2.9-1.6 6.1-4 12.7L929.1 215H990.6L969 156.6c-3.3-8.6-3.9-10.4-4.3-12.7zm-24.3 63.2 16.4-46.7c.5-1.2.5-1.2 3-9.2 2.4 7.8 2.5 8 2.8 9.2l16.5 46.7h-38.7zM1029.4 156.9c-1.8-4.3-3.2-8.8-4.1-12.9h-12.1c.7 4.8 1 9.1 1 15.3V215h7.6v-37.3c0-4.8-.2-10.5-.9-24.7 3.3 10 4.9 14.5 7.2 20.1l17.2 41.9h7.8l-23.7-58.1zM1109.2 143.9h-11.8c-.7 3.7-2 7.7-4.2 12.9l-23.8 58.1h7.8l17.4-42.3c2.1-5.2 3.8-10.2 6.8-19.7-.6 15.3-.7 19.6-.7 24.7V215h7.5v-55.8c0-6.5.2-10.3 1-15.3zM1167.9 196.8c6.2 0 9.1.3 13.3 1V188c-4.8.7-8 1-13.3 1H1135v-37.2h38.5c6 0 9.3.3 13.3 1V143c-4.3.7-8 1-13.3 1h-34.6c-5.6 0-8.5-.1-13-.4.7 5.8 1 9.7 1 15.2V215h7.9v-18.2h33.1zM1254.9 143.9h-9.9c.7 4.8 1 8.5 1 14.9V215h7.8v-56.2c0-5.4.4-10.5 1.1-14.9zM1307.3 191.2c-14.2-3.3-14.2-3.3-17.8-5-7.5-3.3-11.2-8.7-11.2-16.3 0-11.7 9.2-19.8 22.6-19.8 8.3 0 14.8 2.9 18.9 8.4 2.5 3.3 3.6 6.1 4.4 11.8l8.5-1.5c-1.2-6.9-2.5-10.2-5.2-14.2-5.4-8.1-14.7-12.4-26.4-12.4-18.6 0-30.7 11-30.7 27.8 0 9.7 4.1 17.1 12 21.8 4.1 2.3 8.5 3.9 16.4 5.8 14.2 3.3 15.9 4 20.1 6.6 3.8 2.3 6.1 6 7 10.8h8.2c-1.4-12.7-9.5-19.7-26.8-23.8z"/>
+      </g>
+      <g class="myNameBottom">
+         <path d="m642.8 244.7-8.1-19.7H627l7.8 19c2.5 6.2 3.7 10 4.2 13.4h7.4c.7-3.7 1.8-7 4.4-13.2l7.9-19.1h-7.8l-8.1 19.6zM595.8 242.2c0 6.5-.2 10.3-1 15.2h9.6c-.7-4.7-1-8.5-1-15.2V225h-7.6v17.2zM682.2 242.2c0 5.9-.2 10.3-.9 15.2h9.4c-.7-4.8-1-8.4-1-15.2V225h-7.5v17.2zM736.1 242.5c0 6.2-.2 10.1-1 14.9h10.1c-.7-5-1-8.3-1-14.9V225h-8.1v17.5zM897.7 227.2c0 2.5.2 10.9.7 21.2-4.8-9.1-6.4-11.8-9-16.1L885 225h-8.9l12.2 20.5c3.2 5.5 4.7 8.1 6.3 11.9h11.7c-.7-4.3-1-8.1-1-14.9V225h-7.8v2.2zM833.4 242.1c0 6.6-.2 10.7-1 15.3h9.6c-.7-4.5-1-8.5-1-15.3V225h-7.6v17.1zM988.6 243.5c1.6 4.3 3 9.2 4 13.9h10.9c-2-3.6-3.6-7.4-6.7-15.7l-6.2-16.7H982l6.6 18.5zM922.9 241.7c-3.4 9.5-4.2 11-6.7 15.7h10.9c.9-4.4 2.1-9 4-13.9l6.7-18.5h-8.7l-6.2 16.7zM1061.3 244.7l-8.1-19.7h-7.8l7.8 19c2.5 6.2 3.7 10 4.2 13.4h7.4c.7-3.7 1.8-7 4.4-13.2l7.9-19.1h-7.8l-8 19.6zM1014.3 242.2c0 6.5-.2 10.3-1 15.2h9.6c-.7-4.7-1-8.5-1-15.2V225h-7.6v17.2zM1100.6 242.2c0 5.9-.2 10.3-.9 15.2h9.4c-.7-4.8-1-8.4-1-15.2V225h-7.5v17.2zM1127 241.9c0 6.5-.2 10.7-1 15.8 4.4-.3 7.4-.4 13-.4h35.7c6.3 0 9.4.3 13.2 1v-9.8c-4.4.7-7.9 1-13.2 1H1135V225h-7.9v16.9zM1246 242.5c0 6.5-.2 10.1-1 14.9h9.9c-.7-4.4-1.1-9.2-1.1-14.9V225h-7.8v17.5zM1326.3 229.5c0 13.6-9.3 21.8-24.6 21.8-9.5 0-17.2-3.6-21.3-9.9-2.6-4-3.6-7.4-3.9-14.2l-8.9 1.4c1.1 8.5 2.4 12.5 5.4 17.4 5.4 8.5 15.6 13.2 29 13.2 20.5 0 32.3-10.9 32.3-29.8 0-1.5-.1-3-.2-4.4h-8.2c.2 1.4.4 2.9.4 4.5z"/>
+      </g>
+      <% if false %>
+      <g class="stretchOne" class="stretch">
+        <line class="openTwo" x1="777.8" y1="177" x2="777.8" y2="30"/>
+      </g>
+      <g class="stretchTwo">
+        <line class="openTwo" x1="843" y1="177" x2="843" y2="30"/>
+      </g>
+      <g class="stretchThree">
+        <line class="openTwo" x1="869.7" y1="177" x2="869.7" y2="30"/>
+      </g>
+      <g class="stretchFour">
+        <line  class="openTwo" x1="943.1" y1="177" x2="943.1" y2="30"/>
+      </g>
+      <g class="stretchFive">
+        <line class="openTwo" x1="1014.8" y1="177" x2="1014.8" y2="30"/>
+      </g>
+      <g class="stretchSix">
+        <line class="openTwo" x1="1078" y1="177" x2="1078" y2="30"/>
+      </g>
+      <g class="stretchLast">
+        <line class="openTwo" x1="1152" y1="177" x2="1153" y2="30" />
+      </g>
+      <% end %>
     </g>
 </svg>
 <div class="box-two">
