--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -101,10 +101,17 @@ html {
   -webkit-tap-highlight-color:transparent;
  }
 
-.stretchOne, .stretchTwo, .stretchSix, .stretchLast {
+.stretchTwo, .stretchThreeTwo, .stretchOne {
   stroke-width: 7.6px;
   stroke: black;
 	fill: none;
+  overflow: visible;
+}
+
+.stretchSix, .stretchLast {
+  stroke-width: 7.8px;
+  stroke: black;
+  fill: none;
   overflow: visible;
 }
 
@@ -120,4 +127,17 @@ html {
   stroke: black;
 	fill: none;
   overflow: visible;
+}
+
+.stretchFourTwo {
+  stroke-width: 7.4px;
+  stroke: black;
+  fill: none;
+  overflow: visible;
+}
+
+svg#Layer_2 {
+  position: relative;
+  top: -53rem;
+  left: 0;
 }
