--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -97,7 +97,7 @@ html {
 }
 
 
-.helloTop {
+.helloTop, .myNameTop {
   -webkit-tap-highlight-color:transparent;
  }
 
@@ -136,7 +136,7 @@ html {
   overflow: visible;
 }
 
-.stretchHeightTwo {
+.stretchEightTwo {
   stroke-width: 7.2px;
   stroke: black;
   fill: none;
