--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -75,55 +75,55 @@
        <path d="m642.8 244.7-8.1-19.7H627l7.8 19c2.5 6.2 3.7 10 4.2 13.4h7.4c.7-3.7 1.8-7 4.4-13.2l7.9-19.1h-7.8l-8.1 19.6zM595.8 242.2c0 6.5-.2 10.3-1 15.2h9.6c-.7-4.7-1-8.5-1-15.2V225h-7.6v17.2zM682.2 242.2c0 5.9-.2 10.3-.9 15.2h9.4c-.7-4.8-1-8.4-1-15.2V225h-7.5v17.2zM736.1 242.5c0 6.2-.2 10.1-1 14.9h10.1c-.7-5-1-8.3-1-14.9V225h-8.1v17.5zM897.7 227.2c0 2.5.2 10.9.7 21.2-4.8-9.1-6.4-11.8-9-16.1L885 225h-8.9l12.2 20.5c3.2 5.5 4.7 8.1 6.3 11.9h11.7c-.7-4.3-1-8.1-1-14.9V225h-7.8v2.2zM833.4 242.1c0 6.6-.2 10.7-1 15.3h9.6c-.7-4.5-1-8.5-1-15.3V225h-7.6v17.1zM988.6 243.5c1.6 4.3 3 9.2 4 13.9h10.9c-2-3.6-3.6-7.4-6.7-15.7l-6.2-16.7H982l6.6 18.5zM922.9 241.7c-3.4 9.5-4.2 11-6.7 15.7h10.9c.9-4.4 2.1-9 4-13.9l6.7-18.5h-8.7l-6.2 16.7zM1061.3 244.7l-8.1-19.7h-7.8l7.8 19c2.5 6.2 3.7 10 4.2 13.4h7.4c.7-3.7 1.8-7 4.4-13.2l7.9-19.1h-7.8l-8 19.6zM1014.3 242.2c0 6.5-.2 10.3-1 15.2h9.6c-.7-4.7-1-8.5-1-15.2V225h-7.6v17.2zM1100.6 242.2c0 5.9-.2 10.3-.9 15.2h9.4c-.7-4.8-1-8.4-1-15.2V225h-7.5v17.2zM1127 241.9c0 6.5-.2 10.7-1 15.8 4.4-.3 7.4-.4 13-.4h35.7c6.3 0 9.4.3 13.2 1v-9.8c-4.4.7-7.9 1-13.2 1H1135V225h-7.9v16.9zM1246 242.5c0 6.5-.2 10.1-1 14.9h9.9c-.7-4.4-1.1-9.2-1.1-14.9V225h-7.8v17.5zM1326.3 229.5c0 13.6-9.3 21.8-24.6 21.8-9.5 0-17.2-3.6-21.3-9.9-2.6-4-3.6-7.4-3.9-14.2l-8.9 1.4c1.1 8.5 2.4 12.5 5.4 17.4 5.4 8.5 15.6 13.2 29 13.2 20.5 0 32.3-10.9 32.3-29.8 0-1.5-.1-3-.2-4.4h-8.2c.2 1.4.4 2.9.4 4.5z"/>
     </g>
     <g class="stretchOne">
-      <line class="openTwo" x1="599.3" y1="400" x2="599.3" y2="401"/>
+      <line class="openTwo" x1="599.3" y1="401" x2="599.3" y2="234"/>
     </g>
     <g class="stretchTwo">
-      <line class="openTwo" x1="631" y1="400" x2="631" y2="401"/>
+      <line class="openTwo" x1="631" y1="401" x2="631" y2="234"/>
     </g>
     <g class="stretchThreeTwo">
-      <line class="openTwo" x1="654.7" y1="400" x2="654.7" y2="401"/>
+      <line class="openTwo" x1="654.7" y1="401" x2="654.7" y2="234"/>
     </g>
     <g class="stretchFourTwo">
-      <line class="openTwo" x1="685.95" y1="400" x2="685.95" y2="401"/>
+      <line class="openTwo" x1="685.95" y1="401" x2="685.95" y2="234"/>
     </g>
     <g class="stretchFiveTwo">
-      <line class="openTwo" x1="740" y1="400" x2="740" y2="401"/>
+      <line class="openTwo" x1="740" y1="401" x2="740" y2="234"/>
     </g>
     <g class="stretchSixTwo">
-      <line class="openTwo" x1="837" y1="400" x2="837" y2="401"/>
+      <line class="openTwo" x1="837" y1="401" x2="837" y2="234"/>
     </g>
     <g class="stretchSevenTwo">
-      <line class="openTwo" x1="880.1" y1="400" x2="880.1" y2="401"/>
-    </g>
-    <g class="stretchHeightTwo">
-      <line class="openTwo" x1="901.6" y1="400" x2="901.6" y2="401"/>
-    </g>
-    <g class="stretchNineTwo">
-      <line class="openTwo" x1="933.8" y1="400" x2="933.8" y2="401"/>
-    </g>
-    <g class="stretchTenTwo">
-      <line class="openTwo" x1="986.2" y1="400" x2="986.2" y2="401"/>
-    </g>
-    <g class="stretchOne">
-      <line class="openTwo" x1="1018" y1="400" x2="1018" y2="401"/>
-    </g>
-    <g class="stretchElevenTwo">
-      <line class="openTwo" x1="1049.1" y1="400" x2="1049.1" y2="401"/>
-    </g>
-    <g class="stretchTwelveTwo">
-      <line class="openTwo" x1="1073.1" y1="400" x2="1073.1" y2="401"/>
+      <line class="openTwo" x1="880.1" y1="401" x2="880.1" y2="234"/>
     </g>
     <g class="stretchEightTwo">
-      <line class="openTwo" x1="1104.5" y1="400" x2="1104.5" y2="401"/>
+      <line class="openTwo" x1="901.6" y1="401" x2="901.6" y2="234"/>
+    </g>
+    <g class="stretchNineTwo">
+      <line class="openTwo" x1="933.8" y1="401" x2="933.8" y2="234"/>
+    </g>
+    <g class="stretchTenTwo">
+      <line class="openTwo" x1="986.2" y1="401" x2="986.2" y2="234"/>
+    </g>
+    <g class="stretchOne">
+      <line class="openTwo" x1="1018" y1="401" x2="1018" y2="234"/>
+    </g>
+    <g class="stretchElevenTwo">
+      <line class="openTwo" x1="1049.1" y1="401" x2="1049.1" y2="234"/>
+    </g>
+    <g class="stretchTwelveTwo">
+      <line class="openTwo" x1="1073.1" y1="401" x2="1073.1" y2="234"/>
+    </g>
+    <g class="stretchEightTwo">
+      <line class="openTwo" x1="1104.5" y1="401" x2="1104.5" y2="234"/>
     </g>
     <g class="stretchThirtheenTwo">
-      <line class="openTwo" x1="1130.9" y1="400" x2="1130.9" y2="401"/>
+      <line class="openTwo" x1="1130.9" y1="401" x2="1130.9" y2="234"/>
     </g>
     <g class="stretchFour">
-      <line class="openTwo" x1="1249.5" y1="400" x2="1249.5" y2="401"/>
+      <line class="openTwo" x1="1249.5" y1="401" x2="1249.5" y2="234"/>
     </g>
     <g class="stretchLast">
-      <line class="openTwo" x1="1330" y1="400" x2="1330" y2="401"/>
+      <line class="openTwo" x1="1330" y1="401" x2="1330" y2="234"/>
     </g>
   </g>
 </svg>
