--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -207,7 +207,7 @@
     <g class="stretchFourtheenThree">
       <line class="openThree" x1="1441.2" y1="348" x2="1441.2" y2="181"/>
     </g>
-    <g class="stretchOne">
+    <g class="stretchThree">
       <line class="openThree" x1="1467" y1="348" x2="1467" y2="181"/>
     </g>
     <g class="stretchFourtheenThree">
@@ -215,6 +215,180 @@
     </g>
     <g class="stretchFourLast">
       <line class="openThree" x1="1531.2" y1="348" x2="1531.2" y2="181"/>
+    </g>
+  </g>
+</svg>
+<svg id="Layer_3" x="0" y="0" version="1.1" viewBox="0 0 1920 1080">
+  <g class="wholeIAm">
+    <g class="iAmTop">
+	    <path d="M136.1,385.2h-9.9c0.7,4.8,1,8.5,1,14.9v56h7.8v-56C135,394.7,135.3,389.6,136.1,385.2z"/>
+	  	<path d="M201.4,466.1l-6.2,16.8c-3.5,9.5-4.2,11-6.7,15.7h10.9c0.9-4.4,2.1-9,4-13.9l6.7-18.5"/>
+	  	<path d="M241.2,397.9c-3.2-8.5-3.8-10.3-4.2-12.7h-10.1c-0.5,2.9-1.6,6.1-4,12.7l-21.5,58.3h61.3L241.2,397.9z M229.1,401.7
+	  	c0.5-1.2,0.5-1.2,3-9.2c2.4,7.8,2.5,8,2.8,9.2l16.5,46.7h-38.8L229.1,401.7z"/>
+	    <path d="M381.4,385.2h-11.8c-0.7,3.7-2,7.7-4.2,13l-23.7,58h7.8l17.3-42.1c2.1-5.2,3.8-10.2,6.8-19.7c-0.6,15.3-0.7,19.6-0.7,24.7
+	  	v37.2h7.5v-55.6C380.4,394,380.7,390.2,381.4,385.2z"/>
+	    <path d="M301.7,398.2c-1.9-4.3-3.2-8.8-4.1-13h-12.1c0.7,4.8,1,9.1,1,15.3v55.6h7.6V419c0-4.8-0.2-10.5-0.9-24.7
+	  	c3.3,10,4.9,14.5,7.2,20.1l17.2,41.7h7.8L301.7,398.2z"/>
+	  	<path d="M499.5,466.3l6.7,18.5c1.6,4.3,3,9.2,4,13.9H521c-2-3.6-3.6-7.4-6.7-15.7l-6.2-16.8"/>
+		  <path d="M446.7,466.1l-6.2,16.8c-3.5,9.5-4.2,11-6.7,15.7h10.9c0.9-4.4,2.1-9,4-13.9l6.7-18.5"/>
+		  <path d="M486.5,397.9c-3.2-8.5-3.8-10.3-4.2-12.7h-10.1c-0.5,2.9-1.6,6.1-4,12.7l-21.5,58.3h61.3L486.5,397.9z M474.4,401.7
+		  c0.5-1.2,0.5-1.2,3-9.2c2.3,7.8,2.5,8,2.8,9.2l16.5,46.7H458L474.4,401.7z"/>
+	    <path d="M612.2,391.1c9.2,0,17,3.6,22.2,10.3c2.6,3.3,4,6.1,5.9,12.3l8-2.9c-3.1-8.3-5.3-12.1-9.4-16.7c-6.5-7.2-15.8-10.9-27-10.9
+		  c-11.6,0-20.9,3.9-27.9,11.7c-8.9,9.8-13.7,24.7-13.7,42.2c0,6.8,0.7,13.2,2.1,19h8.5c-1.6-5.7-2.5-12.2-2.5-19.4
+		  C578.5,408.8,591.5,391.1,612.2,391.1z"/>
+	    <path d="M707,438c6.5-1.7,9.5-3,13.2-6.5c5.2-5,7.7-11.4,7.7-20.4c0-16.8-9.6-25.9-27.3-25.9H674c-5.4,0-8.5-0.1-13-0.4
+		  c0.7,5.7,1,9.8,1,15.3v56h7.8v-15.7h24.1c8.2,0,12.9,3.7,18.5,15.7h8.4c-0.4-1-0.9-2-1.4-3C715.1,443.5,711.8,439.6,707,438z
+		  M700.2,432.6h-30.4V393H701c12.2,0,18.8,6.6,18.8,19c0,6.1-1.6,10.8-4.8,14.3C711.4,430.4,706,432.6,700.2,432.6z"/>
+	    <path d="M787.9,438.1c6.2,0,9.1,0.3,13.3,1v-9.8c-4.8,0.7-8,1-13.3,1h-33V393h38.5c6,0,9.3,0.3,13.3,1v-9.8c-4.3,0.7-8,1-13.3,1
+		  h-34.5c-5.6,0-8.5-0.1-13-0.4c0.7,5.8,1,9.7,1,15.2v56.2h7.9v-18H787.9z"/>
+	    <path d="M864.6,385.2h-10.1c-0.5,2.9-1.6,6.1-4,12.7L829,456.1h61.3l-21.5-58.3C865.6,389.3,865,387.5,864.6,385.2z M840.3,448.4
+		  l16.4-46.7c0.5-1.2,0.5-1.2,3-9.2c2.4,7.8,2.5,8,2.8,9.2l16.5,46.7H840.3z"/>
+	    <path d="M952.8,393c6.3,0,9.6,0.3,13.6,1v-9.8c-4,0.7-6.9,1-13.6,1H905c-6.4,0-9.5-0.3-13.5-1v9.8c4-0.7,7.4-1,13.5-1h20v63.1h7.8
+		  V393H952.8z"/>
+	    <path d="M986.1,385.2h-9.9c0.7,4.8,1,8.5,1,14.9v56h7.8v-56C985,394.7,985.4,389.6,986.1,385.2z"/>
+	    <path d="M1010.2,399.1c-1.7-5.2-3-9.5-3.7-13.9h-10.7c1.6,2.9,3.5,7.4,6.4,15.8l19.4,55.1h8L1010.2,399.1z"/>
+	    <path d="M1078.5,385.2h-10.9c-0.4,3.3-1.5,7.7-3.6,13.9l-19.2,57h7.9l19.3-55.1C1075.2,392.1,1076.6,388.8,1078.5,385.2z"/>
+	    <path d="M1130.3,438.1c6.2,0,9.1,0.3,13.3,1v-9.8c-4.8,0.7-8,1-13.3,1h-32.9V393h38.5c6,0,9.3,0.3,13.3,1v-9.8c-4.3,0.7-8,1-13.3,1
+		  h-34.6c-5.6,0-8.5-0.1-13-0.4c0.7,5.8,1,9.7,1,15.2v56.2h7.9v-18H1130.3z"/>
+	    <path d="M1271,397.4c-7.3-8.1-17.6-12.3-30.2-12.3h-20.4c-5.7,0-8.5-0.1-13-0.4c0.7,5.8,1,9.8,1,15.2v56.2h7.8V393h25.2
+		  c21.5,0,33.7,15.6,33.7,42.8c0,7.6-0.9,14.4-2.7,20.2h8.3c1.6-6,2.4-12.7,2.4-20C1283.1,419.5,1279,406.3,1271,397.4z"/>
+	    <path d="M1306.2,385.2h-9.9c0.7,4.8,1,8.5,1,14.9v56h7.8v-56C1305.1,394.7,1305.5,389.6,1306.2,385.2z"/>
+	    <path d="M1368.6,438c6.5-1.7,9.5-3,13.2-6.5c5.2-5,7.7-11.4,7.7-20.4c0-16.8-9.6-25.9-27.3-25.9h-26.5c-5.4,0-8.5-0.1-13-0.4
+		  c0.7,5.7,1,9.8,1,15.3v56h7.8v-15.7h24.1c8.2,0,12.9,3.7,18.5,15.7h8.4c-0.4-1-0.9-2-1.4-3C1376.7,443.5,1373.4,439.6,1368.6,438z
+		  M1361.8,432.6h-30.4V393h31.2c12.2,0,18.8,6.6,18.8,19c0,6.1-1.6,10.8-4.8,14.3C1373,430.4,1367.6,432.6,1361.8,432.6z"/>
+	    <path d="M1449.5,438.1c6.2,0,9.1,0.3,13.3,1v-9.8c-4.8,0.7-8,1-13.3,1h-32.9V393h38.5c6,0,9.3,0.3,13.3,1v-9.8c-4.3,0.7-8,1-13.3,1
+		  h-34.6c-5.6,0-8.5-0.1-13-0.4c0.7,5.8,1,9.7,1,15.2v56.2h7.9v-18H1449.5z"/>
+	    <path d="M1518,391.1c9.2,0,17,3.6,22.2,10.3c2.6,3.3,4,6.1,5.9,12.3l8-2.9c-3.1-8.3-5.3-12.1-9.4-16.7c-6.5-7.2-15.8-10.9-27-10.9
+		  c-11.6,0-20.9,3.9-27.9,11.7c-8.9,9.8-13.7,24.7-13.7,42.2c0,6.8,0.7,13.2,2.2,19h8.5c-1.6-5.7-2.5-12.2-2.5-19.4
+		  C1484.3,408.8,1497.4,391.1,1518,391.1z"/>
+	    <path d="M1619.8,393c6.3,0,9.6,0.3,13.6,1v-9.8c-3.9,0.7-6.9,1-13.6,1h-47.8c-6.4,0-9.5-0.3-13.4-1v9.8c3.9-0.7,7.4-1,13.4-1h20
+		  v63.1h7.8V393H1619.8z"/>
+	    <path d="M1676.4,383.3c-11.3,0-21.1,4.3-28.5,12.4c-8.5,9.4-13.2,24-13.2,41.3c0,6.9,0.7,13.3,2.1,19.1h8.6
+		  c-1.7-5.7-2.6-12.2-2.6-19.3c0-27.5,13.3-45.7,33.7-45.7c8.8,0,16.4,3.4,22.3,9.9c7.3,8.1,11.1,20.4,11.1,35.8
+		  c0,7-0.9,13.5-2.5,19.3h8.5c1.4-5.8,2.1-12.2,2.1-19.1C1718.1,404.2,1701.9,383.3,1676.4,383.3z"/>
+	    <path d="M1777.7,438c6.5-1.7,9.5-3,13.2-6.5c5.2-5,7.7-11.4,7.7-20.4c0-16.8-9.6-25.9-27.3-25.9h-26.5c-5.4,0-8.5-0.1-13-0.4
+		  c0.7,5.7,1,9.8,1,15.3v56h7.8v-15.7h24.1c8.2,0,12.9,3.7,18.5,15.7h8.4c-0.4-1-0.9-2-1.4-3C1785.8,443.5,1782.5,439.6,1777.7,438z
+		  M1770.9,432.6h-30.4V393h31.2c12.2,0,18.8,6.6,18.8,19c0,6.1-1.6,10.8-4.8,14.3C1782.1,430.4,1776.7,432.6,1770.9,432.6z"/>
+    </g>
+    <g class="iAmBottom">
+      <path d="M127.2,483.8c0,6.5-0.2,10.1-1,14.9h9.9c-0.7-4.4-1.1-9.2-1.1-14.9v-17.7h-7.8V483.8z"/>
+	    <path d="M333.5,486l-8.1-19.9h-7.8l7.9,19.2c2.5,6.2,3.7,10,4.2,13.4v0h7.4c0.7-3.7,1.8-7,4.4-13.2l8-19.3h-7.8L333.5,486z"/>
+	    <path d="M372.9,483.5c0,5.9-0.2,10.3-0.9,15.2h9.4c-0.7-4.8-1-8.4-1-15.2v-17.4h-7.5V483.5z"/>
+      <path d="M254.2,466.3l6.7,18.5c1.6,4.3,3,9.2,4,13.9h10.8c-2-3.6-3.6-7.4-6.7-15.7l-6.2-16.8"/>
+	    <path d="M286.5,483.5c0,6.5-0.2,10.3-1,15.2h9.6c-0.7-4.7-1-8.5-1-15.2v-17.4h-7.6V483.5z"/>
+	    <path d="M583.7,488.6c6.8,7.7,16.5,11.9,28,11.9c13.7,0,24.9-5.8,31.7-16.3c2.6-4.1,4.1-7.7,6.2-15.2l-8.3-2.5
+	  	c-1.1,6.3-2.5,9.8-5.3,13.9c-5.2,7.7-13.7,12-23.8,12c-15.2,0-26.4-9.8-31.2-26.3h-8.5C574.7,475.1,578.4,482.8,583.7,488.6z"/>
+	    <path d="M716.1,474.8c5.3,13.6,7.2,19.7,7.4,23.8h11.2c-1.7-3.2-3.1-6.3-5.5-12.5c-3.1-7.8-5.5-13.6-8.4-20h-8.4
+	  	C713.6,468.6,714.8,471.5,716.1,474.8z"/>
+	    <path d="M662.1,483.8c0,6.5-0.2,10.1-1,14.9h9.8c-0.7-4.8-1-8.3-1-14.9v-17.7h-7.8V483.8z"/>
+	    <polygon points="807.7,499.6 807.7,499.6 807.7,499.6 	"/>
+	    <path d="M746.9,483.2c0,6.5-0.2,10.7-1,15.8c4.5-0.3,7.4-0.4,13-0.4h35.7c6.3,0,9.4,0.3,13.2,1v-9.8c-4.4,0.7-7.9,1-13.2,1h-39.7
+	  	v-24.7h-7.9V483.2z"/>
+	    <path d="M829,466.1l-6.2,16.8c-3.4,9.5-4.2,11-6.7,15.7H827c0.9-4.4,2.1-9,4-13.9l6.7-18.5"/>
+	    <path d="M881.7,466.3l6.7,18.5c1.6,4.3,3,9.2,4,13.9h10.9c-2-3.6-3.6-7.4-6.7-15.7l-6.2-16.8"/>
+	    <path d="M925,483.8c0,6.3-0.2,10.5-1,14.9h9.8c-0.7-4.8-1-8.4-1-14.9v-17.7H925V483.8z"/>
+	    <path d="M977.3,483.8c0,6.5-0.2,10.1-1,14.9h9.9c-0.7-4.4-1.1-9.2-1.1-14.9v-17.7h-7.8V483.8z"/>
+	    <path d="M1040.1,480.3c-1,2.9-1.7,5.5-2.8,9.5c-1.1-3.6-2.6-8.3-3-9.5l-4.8-14.2h-8l7,19.9c2.6,7.6,3.3,9.9,3.9,12.7h9.5
+	  	c0.6-3,1.7-6.5,3.8-12.7l7-19.9h-7.9L1040.1,480.3z"/>
+	    <path d="M1089.4,483.2c0,6.5-0.2,10.7-1,15.8c4.4-0.3,7.4-0.4,13-0.4h35.7c6.3,0,9.4,0.3,13.2,1v-9.8c-4.4,0.7-7.9,1-13.2,1h-39.7
+	  	v-24.7h-7.9V483.2z"/>
+	    <path d="M1240.8,490.8h-24.6v-24.7h-7.8v17.1c0,6.5-0.2,10.6-1,15.8c4.3-0.3,7.3-0.4,13-0.4h20.5c11.8,0,22.1-4.3,29.4-12.3
+	  	c4.7-5.2,8.3-12.1,10.4-20.3h-8.3C1267.5,481.9,1256.4,490.8,1240.8,490.8z"/>
+	    <path d="M1297.3,483.8c0,6.5-0.2,10.1-1,14.9h9.9c-0.7-4.4-1.1-9.2-1.1-14.9v-17.7h-7.8V483.8z"/>
+	    <path d="M1377.7,474.8c5.3,13.6,7.2,19.7,7.4,23.8h11.2c-1.7-3.2-3.1-6.3-5.6-12.5c-3.1-7.8-5.5-13.6-8.4-20h-8.4
+	  	C1375.2,468.6,1376.4,471.5,1377.7,474.8z"/>
+	    <path d="M1323.7,483.8c0,6.5-0.2,10.1-1,14.9h9.8c-0.7-4.8-1-8.3-1-14.9v-17.7h-7.8V483.8z"/>
+	    <path d="M1408.5,483.2c0,6.5-0.2,10.7-1,15.8c4.4-0.3,7.4-0.4,13-0.4h35.7c6.3,0,9.4,0.3,13.2,1v-9.8c-4.4,0.7-7.9,1-13.2,1h-39.7
+	  	v-24.7h-7.9V483.2z"/>
+	    <path d="M1489.5,488.6c6.8,7.7,16.5,11.9,28,11.9c13.7,0,24.9-5.8,31.7-16.3c2.6-4.1,4.1-7.7,6.2-15.2l-8.3-2.5
+	  	c-1.1,6.3-2.5,9.8-5.3,13.9c-5.2,7.7-13.7,12-23.8,12c-15.2,0-26.4-9.8-31.2-26.3h-8.5C1480.5,475.1,1484.3,482.8,1489.5,488.6z"/>
+	    <path d="M1592.1,483.8c0,6.3-0.2,10.5-1,14.9h9.8c-0.7-4.8-1-8.4-1-14.9v-17.7h-7.8V483.8z"/>
+	    <path d="M1698.7,483c-5.8,6.3-13.3,9.6-22.1,9.6c-15,0-26.3-10.1-31.2-26.5h-8.6c5.2,21.5,19.5,34.5,39.6,34.5
+	  	c20.1,0,34.4-12.9,39.6-34.5h-8.5C1705.5,472.9,1702.6,478.6,1698.7,483z"/>
+	    <path d="M1732.7,483.8c0,6.5-0.2,10.1-1,14.9h9.8c-0.7-4.8-1-8.3-1-14.9v-17.7h-7.8V483.8z"/>
+	    <path d="M1786.8,474.8c5.3,13.6,7.2,19.7,7.4,23.8h11.2c-1.7-3.2-3.1-6.3-5.6-12.5c-3.1-7.8-5.5-13.6-8.4-20h-8.4
+	  	C1784.3,468.6,1785.5,471.5,1786.8,474.8z"/>
+    </g>
+    <g class="stretchOne">
+      <line class="openFour" x1="369" y1="348" x2="369" y2="181"/>
+    </g>
+    <g class="stretchTwoThree">
+      <line class="openFour" x1="442.4" y1="348" x2="442.4" y2="181"/>
+    </g>
+    <g class="stretchThreeTwo">
+      <line class="openFour" x1="505.8" y1="348" x2="505.8" y2="181"/>
+    </g>
+    <g class="stretchFourThree">
+      <line class="openFour" x1="531.1" y1="348" x2="531.1" y2="181"/>
+    </g>
+    <g class="stretchFiveThree">
+      <line class="openFour" x1="600" y1="348" x2="600" y2="181"/>
+    </g>
+    <g class="stretchSixTwo">
+      <line class="openFour" x1="625" y1="348" x2="625" y2="181"/>
+    </g>
+    <g class="stretchSevenTwo">
+      <line class="openFour" x1="689.2" y1="348" x2="689.2" y2="181"/>
+    </g>
+    <g class="stretchEightThree">
+      <line class="openFour" x1="714" y1="348" x2="714" y2="181"/>
+    </g>
+    <g class="stretchNineThree">
+      <line class="openFour" x1="769.3" y1="348" x2="769.3" y2="181"/>
+    </g>
+    <g class="stretchTenThree">
+      <line class="openFour" x1="800.1" y1="348" x2="800.1" y2="181"/>
+    </g>
+    <g class="stretchTenThree">
+      <line class="openFour" x1="852.3" y1="348" x2="852.3" y2="181"/>
+    </g>
+    <g class="stretchElevenThree">
+      <line class="openFour" x1="885" y1="348" x2="885" y2="181"/>
+    </g>
+    <g class="stretchTwelveThree">
+      <line class="openFour" x1="948" y1="348" x2="948" y2="181"/>
+    </g>
+    <g class="stretchOne">
+      <line class="openFour" x1="1018.1" y1="348" x2="1018.1" y2="181"/>
+    </g>
+    <g class="stretchTwelveThree">
+      <line class="openFour" x1="1062.6" y1="348" x2="1062.6" y2="181"/>
+    </g>
+    <g class="stretchThree">
+      <line class="openFour" x1="1082.3" y1="348" x2="1082.3" y2="181"/>
+    </g>
+    <g class="stretchThirtheenThree">
+      <line class="openFour" x1="1113" y1="348" x2="1113" y2="181"/>
+    </g>
+    <g class="stretchThirtheenThree">
+      <line class="openFour" x1="1168" y1="348" x2="1168" y2="181"/>
+    </g>
+    <g class="stretchFourtheenThree">
+      <line class="openFour" x1="1199" y1="348" x2="1199" y2="181"/>
+    </g>
+    <g class="stretchFourtheenThree">
+      <line class="openFour" x1="1251" y1="348" x2="1251" y2="181"/>
+    </g>
+    <g class="stretchFourtheenThree">
+      <line class="openFour" x1="1283.5" y1="348" x2="1283.5" y2="181"/>
+    </g>
+    <g class="stretchFourtheenThree">
+      <line class="openFour" x1="1347" y1="348" x2="1347" y2="181"/>
+    </g>
+    <g class="stretchFourtheenThree">
+      <line class="openFour" x1="1372" y1="348" x2="1372" y2="181"/>
+    </g>
+    <g class="stretchFourtheenThree">
+      <line class="openFour" x1="1441.2" y1="348" x2="1441.2" y2="181"/>
+    </g>
+    <g class="stretchOne">
+      <line class="openFour" x1="1467" y1="348" x2="1467" y2="181"/>
+    </g>
+    <g class="stretchFourtheenThree">
+      <line class="openFour" x1="1512" y1="348" x2="1512" y2="181"/>
+    </g>
+    <g class="stretchFourLast">
+      <line class="openFour" x1="1531.2" y1="348" x2="1531.2" y2="181"/>
     </g>
   </g>
 </svg>
